[gd_scene load_steps=8 format=2]

[ext_resource path="res://Stats.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemy/Shooter.gd" type="Script" id=2]
[ext_resource path="res://Enemy/shooter.png" type="Texture" id=3]
[ext_resource path="res://Player/BulletSpawner.gd" type="Script" id=4]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 44.0212, 15.7606 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 62.7736, 24.5767 )

[node name="Shooter" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.99469, -11.0736 )
shape = SubResource( 1 )

[node name="Stats" parent="." instance=ExtResource( 1 )]

[node name="Hurtbox" parent="." instance=ExtResource( 7 )]
collision_layer = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0.554779, -8.59911 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="activeTimer" type="Timer" parent="."]
wait_time = 0.001
one_shot = true

[node name="BulletSpawner" type="Node2D" parent="."]
script = ExtResource( 4 )
direction = Vector2( 0, 1000 )
target = "player"

[node name="Dialog" type="Node2D" parent="."]
position = Vector2( 460.682, -48.8912 )
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="activeTimer" to="." method="_on_activeTimer_timeout"]

[editable path="Hurtbox"]
